--- a/Helper_methods.ipynb
+++ b/Helper_methods.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def simple_metrics(y_test, y_pred):\n",
+    "def simple_metrics(test_label, y_pred):\n",
     "    '''Take y_test and y_pred as input \n",
     "    and prints the accuracy, f1-score and the confusion matrix.'''\n",
     "    print('accuracy_score', accuracy_score(test_label, y_pred))\n",
