--- a/Helper_methods.ipynb
+++ b/Helper_methods.ipynb
@@ -84,6 +84,12 @@
     "import itertools\n",
     "\n",
     "\n",
+    "# Plot formatting\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "plt.rcParams['font.size'] = 18\n",
+    "plt.figure(figsize = (8, 8))\n",
+    "\n",
+    "\n",
     "def plot_confusion_matrix(cm, classes,\n",
     "                          normalize=False,\n",
     "                          title='Confusion matrix',\n",
